# python-mcp-server

./: .gitlab-ci.yml  CLAUDE.md  cfg.yml  pyproject.toml  readme.md  ruff.toml  template-secrets.env  ty.toml
src/python_mcp_server/: __init__.py  __main__.py  cfg.yml  config.py  models.py  py.typed  seed.py  server.py
src/python_mcp_server/clients/: __init__.py  embedder.py  graphiti_bedrock.py  graphiti_client.py  rag_client.py  test_embedder.py  test_graphiti_bedrock.py  test_graphiti_client.py  test_rag_client.py
tests/: __init__.py  conftest.py  test_graphiti_client_integration.py  test_integration.py  test_mcp_rag_search_integration.py  test_rag_client_integration.py  test_seed.py
tests/fixtures/: containers.py
