[project]
name = "python-mcp-server"
version = "1.0.0-beta"
description = "MCP server with Graphiti knowledge graph and RAG search for accurate AI responses"
requires-python = "==3.13.2"
dependencies = [
    "pydantic>=2.9.2",
    "mcp[cli]>=1.0.0",
    "graphiti-core[neptune]>=0.3.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pyyaml>=6.0.0",
    "starlette>=0.49.1",
    "neo4j>=6.1.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
]

[project.scripts]
python-mcp-server = "python_mcp_server.__main__:main"

[tool.uv]
package = true
constraint-dependencies = [
    "cryptography>=46.0.7",     # CVE-2026-39892
    "pygments>=2.20.0",         # CVE-2026-4539
    "requests>=2.33.0",         # CVE-2026-25645
    "aiohttp>=3.13.4",          # 10 CVEs in 3.13.3
    "python-multipart>=0.0.27", # CVE-2026-42561
    "urllib3>=2.7.0",           # CVE-2026-44431, CVE-2026-44432
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31",
    "boto3-stubs[bedrock-runtime]>=1.35.0",
    "mypy-boto3-bedrock-runtime>=1.35.0",
    "bandit>=1.8.0",
    "black[d]>=26.3.1",
    "poethepoet>=0.32.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "pip-audit>=2.6.1",
    "pytest-cov>=6.0.0",
    "deptry>=0.23.0",
    "pip>=26.1",  # CVE-2026-6357
    "ty>=0.0.18",
    "types-pyyaml>=6.0",
    "testcontainers[neo4j,postgres]>=4.14.2",
    "pook>=2.1.4",
]

[tool.setuptools.package-data]
# Bundle cfg.yml in the wheel so config.load_config can find it when
# this package is consumed as a git dep from another project's venv
# (the repo root isn't accessible there).
python_mcp_server = ["cfg.yml"]

[tool.poe.tasks]
depcheck = "deptry . --per-rule-ignores DEP004=pytest,DEP002=asyncpg|starlette"
format = "black ."
lint = "ruff check"
typecheck = "ty check"
audit-src = "bandit -r src/* -s B101,B608"
audit-packages = "pip-audit --ignore-vuln GHSA-4xh5-x5gv-qwph --ignore-vuln GHSA-58qw-9mgm-455v"
security = ["audit-src", "audit-packages"]
checks = ["depcheck", "format", "lint", "typecheck", "security"]
unit = "pytest -vv src/*"
integration = "pytest -vv tests/*"
cover = "pytest -vv --cov"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "bash -c 'uv run poe checks && uv run poe cover && uv run poe review && git add -A && git cz && git push'"

[tool.coverage.run]
omit = ["*/test_*.py", "tests/*"]
